# mediawhaler

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/: config.yaml
docs/: configuration.norg  logs.md  logs.norg
src/: api_error.rs  config.rs  directories.rs  lib.rs  logs.rs  main.rs  server.rs
src/api/: auth.rs  create_user.rs
