[package]
name = "mediawhaler"
authors = ["Pierrick Guillaume <pierrick@fymyte.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6"
clap = { version = "4", features = ["derive"] }
directories = "4"
figment = { version = "0.10", features = ["yaml", "env", "json"] }
serde = { version = "1.0", features = ["serde_derive"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
